--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,18 @@ Temporary Items
 *.exe
 *.out
 *.app
+
+#vs2013
+*.suo
+*.vcxproj
+*.filters
+*.users
+*.tlog
+*.obj
+*.idb
+*.pdb
+*.log
+*.tlog
+#debug
+*.ilk
+*.pdb
